Fixed z-indexes.

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -63,9 +63,13 @@ h2 {
     min-width: 100%;
     min-height: 100%;
     background-image: url("../gfx/mask.png");
-    z-index: -100;
     top: 0;
     left: 0;
+}
+
+.container {
+    position: relative;
+    z-index: 100;
 }
 
 .wrap {
